--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.20.0
-streamlit-chat==0.1.2
-google-cloud-firestore==2.3.4
-firebase-admin==5.2.0
-requests==2.28.1
-groq==0.1.0
+streamlit
+streamlit-chat
+google-cloud-firestore
+firebase-admin
+requests
+groq
