--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-streamlit-chat
-google-cloud-firestore
-firebase-admin
-requests
-groq
-pyspellchecker
+streamlit==1.24.1
+streamlit-chat==0.1.1
+google-cloud-firestore==2.11.0
+firebase-admin==5.3.0
+requests==2.31.0
+groq==0.1.0
+pyspellchecker==0.8.2
