Update requirements.txt to modify dependencies
Removed unused dependencies and added new libraries.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit
-streamlit-chat
-google-cloud-firestore
-firebase-admin
-requests
 groq
-pyspellchecker
+chromadb
+sentence-transformers
+python-dotenv
