--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 # --- Streamlit App Core ---
-streamlit==1.24.1
-streamlit-chat==0.1.1
+streamlit>=1.28.0
+streamlit-chat>=0.1.1
 
 # --- AI / RAG Stack ---
-groq==0.1.0
-chromadb==0.4.24
-sentence-transformers==2.2.2
-transformers>=4.30.0
+groq>=0.4.0
+chromadb>=0.4.22
+sentence-transformers>=2.2.2
+transformers>=4.35.0
 torch>=2.0.0
-huggingface-hub>=0.22.2
-python-dotenv==1.0.0
+huggingface-hub>=0.20.0
 
-# --- Optional Firebase (if needed) ---
-firebase-admin==5.3.0
-google-cloud-firestore==2.11.0
+# --- Data Processing ---
+pandas>=2.0.0
+numpy>=1.24.0
 
 # --- Utilities ---
-requests==2.31.0
-pyspellchecker==0.8.2
+python-dotenv>=1.0.0
+requests>=2.31.0
+
+# --- Optional: Firebase (uncomment if needed) ---
+# firebase-admin>=6.0.0
+# google-cloud-firestore>=2.13.0
