--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-streamlit==1.31.0
+# --- Streamlit App Core ---
+streamlit==1.24.1
+streamlit-chat==0.1.1
+
+# --- AI / RAG Stack ---
 groq==0.4.2
-sentence-transformers==2.3.1
-chromadb==0.4.22
-torch==2.1.2
-transformers==4.37.2
+chromadb==0.4.24
+sentence-transformers==2.2.2
+transformers>=4.30.0
+torch>=2.0.0
+huggingface-hub>=0.22.2
+python-dotenv==1.0.0
+
+# --- Optional Firebase (if needed) ---
+firebase-admin==5.3.0
+google-cloud-firestore==2.11.0
+
+# --- Utilities ---
+requests==2.31.0
+pyspellchecker==0.8.2
 numpy==1.24.3
 pandas==2.0.3
