--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
 # --- Streamlit App Core ---
 streamlit==1.24.1
-streamlit-chat==0.1.1
 
-# --- AI / RAG Stack ---
+# --- AI / LLM Stack ---
 groq==0.9.0
+
+# --- Optional: Advanced Features (Vector Search & Embeddings) ---
+# These are optional - app will work without them with graceful fallback
 chromadb==0.4.24
 sentence-transformers==2.2.2
 transformers>=4.30.0
 torch>=2.0.0
-huggingface-hub>=0.22.2
-python-dotenv==1.0.0
-
-# --- Optional Firebase (if needed) ---
-firebase-admin==5.3.0
-google-cloud-firestore==2.11.0
 
 # --- Utilities ---
-requests==2.31.0
-pyspellchecker==0.8.2
-numpy==1.24.3
-pandas==2.0.3
+python-dotenv==1.0.0
