--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit
-streamlit-chat
-google-cloud-firestore
-firebase-admin
-requests
-groq
-pyspellchecker
-markdown2
+streamlit>=1.38.0
+streamlit-chat>=0.1.1
+groq>=0.5.0
+requests>=2.31.0
+pyspellchecker>=0.8.1
+markdown2>=2.5.0
